--- a/papers/Softening/bib.bib
+++ b/papers/Softening/bib.bib
@@ -1207,3 +1207,41 @@ volume = {81},
 year = {1998}
 }
 
+@article{Hestenes1952,
+abstract = {An interative algorithm is given for solving a system Ax=k of n linear equations in n unknowns. The solution is given in n steps. It is shown that this method is a special case of a very general method which als includes Haussian elimination. These general algorithms are essentially algorithms for finding an n dimensional ellipsoid. Connections are made with the theory of orthogonal polynomials and continued fractions.},
+author = {Hestenes, M.R. and Stiefel, E.},
+doi = {10.6028/jres.049.044},
+file = {:home/ponet/Documents/Mendeley Desktop/jresv49n6p409{\_}A1b.pdf:pdf},
+issn = {0091-0635},
+journal = {J. Res. Natl. Bur. Stand. (1934).},
+number = {6},
+pages = {409},
+title = {{Methods of conjugate gradients for solving linear systems}},
+volume = {49},
+year = {1952}
+}
+
+@misc{Landau1960,
+author = {Landau, L. and Lifshitz, E. M. (Evgeniĭ Mikhaĭlovich)},
+file = {:home/ponet/Documents/Mendeley Desktop/Unknown - Unknown - Vol 7 - Landau, Lifshitz - Theory of Elasticity (87s).pdf.pdf:pdf},
+mendeley-groups = {PhD/FEDW},
+title = {{Vol 7 - Theory of Elasticity}},
+year = {1960}
+}
+
+
+@article{Ghosez1994,
+abstract = {Using Variational Density Functional Perturbation Theory, the dielectric and effective charge tensors of cubic Barium Titanate have been calculated as second derivatives of the total energy with respect to electric field and phonon perturbations. We found a dielectric constant [formula omitted]=5.60 and the following effective charges: Z{\ss}a= 2.70; Zxi= 7.10; ZO//= -5.56; ZO= -2.12. An estimation of the spontaneous polarisation in the distorted phases is also presented. {\textcopyright} 1994, Taylor {\&} Francis Group, LLC. All rights reserved.},
+author = {Ghosez, P. and Gonze, X. and Michenaud, J. P.},
+doi = {10.1080/00150199408016548},
+file = {:home/ponet/Documents/Mendeley Desktop/00150199408016548.pdf:pdf},
+issn = {15635112},
+journal = {Ferroelectrics},
+mendeley-groups = {PhD Thesis/Softening},
+number = {1},
+pages = {91--96},
+title = {{First principle calculations of dielectric and effective charge tensors in barium titanate}},
+volume = {153},
+year = {1994}
+}
+
